--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "pretest": "NODE_ENV=test",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -21,17 +22,32 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^7.6.13",
-    "@nestjs/core": "^7.6.13",
-    "@nestjs/platform-express": "^7.6.13",
+    "@nestjs/axios": "0.0.1",
+    "@nestjs/common": "^8.0.2",
+    "@nestjs/core": "^8.0.2",
+    "@nestjs/platform-express": "^8.0.2",
+    "@nestjs/typeorm": "^8.0.2",
+    "@types/axios": "^0.14.0",
+    "@types/chance": "^1.1.3",
+    "@types/pg": "^8.6.1",
+    "cache-manager": "^3.4.4",
+    "cache-manager-redis-store": "^2.0.0",
+    "chance": "^1.1.8",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
+    "dotenv": "^10.0.0",
+    "path": "^0.12.7",
+    "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.6"
+    "rxjs": "^7.2.0",
+    "typeorm": "^0.2.37"
   },
   "devDependencies": {
-    "@nestjs/cli": "^7.5.6",
-    "@nestjs/schematics": "^7.2.7",
-    "@nestjs/testing": "^7.6.13",
+    "@nestjs/cli": "^8.0.2",
+    "@nestjs/schematics": "^8.0.1",
+    "@nestjs/testing": "^8.0.2",
+    "@types/cache-manager": "^3.4.2",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.31",
